done crud for users

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,8 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #012962;
-$secondary: #ffde01;
+$primary: #12acae;
+// $primary: #ffde01;
+$secondary: #012962;
 $accent: #514e5c;
 
 $dark: #1d1d1d;
